--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="img/avatar-perfil.png" alt="avatar de Miguel" class="rounded-circle" width="150" height="150" srcset="">
         <p class="lead">Prazer, sou Miguel_</p>
         <h1>Faço Programação</h1>
-        <p>Sou pioneiro nessa área, no entanto, realiso pequenos codigos de apps e empresas, como o JavaScript, HTML e CSS</p> 
+        <p>Sou pioneiro nessa área, no entanto, realiso pequenos codigos de apps e serviços de empresas, como o JavaScript, HTML e CSS</p> 
 @@ -27,192 +25,22 @@
             <p class="badge bg-secondary">JavaScript</p>
             <p class="badge bg-secondary">HTML</p>
